apps/jaeger/overlays/ops/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: observability
  annotations:
    link.argocd.argoproj.io/external-link: https://jaeger.unset-127-0-0-1.nip.io # kpt-set: https://jaeger.${host}
spec:
  hosts:
    - "jaeger.unset-127-0-0-1.nip.io" # kpt-set: jaeger.${host}
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: jaeger-query.observability.svc.cluster.local
